--- a/auth-server/serverless.yml
+++ b/auth-server/serverless.yml
@@ -23,7 +23,14 @@ frameworkVersion: '2'
 provider:
   name: aws
   runtime: nodejs12.x
+  region: us-east-2
+  timeout: 60
   lambdaHashingVersion: 20201221
+  environment:
+    CLIENT_ID: ${file(config.json):CLIENT_ID}
+    CLIENT_SECRET: ${file(config.json):CLIENT_SECRET}
+    PROJECT_ID: ${file(config.json):PROJECT_ID}
+    CALENDER_ID: ${file(config.json):CALENDER_ID}
 
 # you can overwrite defaults here
 #  stage: dev
@@ -59,8 +66,12 @@ provider:
 #    - exclude-me-dir/**
 
 functions:
-  hello:
-    handler: handler.hello
+  getAuthURL:
+    handler: handler.getAuthURL
+    events:
+      - http:
+          path: api/get-auth-url
+          method: get
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
