--- a/auth-server/serverless.yml
+++ b/auth-server/serverless.yml
@@ -30,7 +30,7 @@ provider:
     CLIENT_ID: ${file(config.json):CLIENT_ID}
     CLIENT_SECRET: ${file(config.json):CLIENT_SECRET}
     PROJECT_ID: ${file(config.json):PROJECT_ID}
-    CALENDER_ID: ${file(config.json):CALENDER_ID}
+    CALENDAR_ID: ${file(config.json):CALENDAR_ID}
 
 # you can overwrite defaults here
 #  stage: dev
