--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^16.4.0-0",
+    "react-dom": "^16.4.0-0",
     "react-scripts": "4.0.2",
+    "sass": "^1.32.8",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
