--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.4.0-0",
     "react-dom": "^16.4.0-0",
     "react-scripts": "4.0.2",
+    "recharts": "^2.0.9",
     "sass": "^1.32.8",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
